--- a/css/style.css
+++ b/css/style.css
@@ -731,6 +731,7 @@ img {
 /* SUBSCRIDE-FOOTER-PAGE */
 
 .subscribe-paragraph-footer {
+  margin-bottom: 16px;
   color: var(--WHITE, #fff);
   font-family: Roboto;
   font-size: 16px;
@@ -742,9 +743,6 @@ img {
 
 .subscribe-form {
   display: flex;
-}
-
-.email-label {
   gap: 24px;
 }
 
@@ -757,11 +755,12 @@ img {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 200% */
+  line-height: 1.5;
   letter-spacing: 0.48px;
   border-radius: 4px;
   border: 1px solid var(--WHITE, #fff);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   padding-left: 16px;
   padding-top: 8px;
   padding-bottom: 8px;
@@ -786,7 +785,7 @@ img {
   background: var(--IRIS, #4d5ae5);
   color: var(--WHITE, #fff);
   text-align: center;
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
