--- a/css/style.css
+++ b/css/style.css
@@ -815,7 +815,8 @@ img {
   visibility: hidden;
   pointer-events: none;
 
-  transition: opacity 500ms linear, visibility 500ms linear;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open {
@@ -828,17 +829,20 @@ img {
 /* MODAL WINDOW */
 .modal {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  padding: 72px 24px 24px 24px;
   width: 408px;
-  height: 584px;
-  padding: 24px;
+  min-height: 584px;
   border-radius: 4px;
   background: var(--DAIRY, #fcfcfc);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   top: 24px;
   right: 24px;
@@ -850,17 +854,25 @@ img {
   border-radius: 50%;
   width: 24px;
   height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-btn:hover,
 .close-btn:focus {
-  stroke: #4d5ae5;
+  background-color: #404bbf;
 }
 
 .close-btn-icon {
   stroke-width: 1px;
   stroke: rgba(0, 0, 0, 0.1);
-  transition: stroke 250ms ease-out;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn-icon:hover,
+.close-btn-icon:focus {
+  fill: #ffffff;
 }
 
 .close-btn:active {
