--- a/css/style.css
+++ b/css/style.css
@@ -829,6 +829,9 @@ img {
 /* MODAL WINDOW */
 .modal {
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
   padding: 72px 24px 24px 24px;
   width: 408px;
   min-height: 584px;
@@ -862,6 +865,7 @@ img {
 .close-btn:hover,
 .close-btn:focus {
   background-color: #404bbf;
+  border: none;
 }
 
 .close-btn-icon {
