--- a/css/style.css
+++ b/css/style.css
@@ -866,7 +866,6 @@ img {
 .close-btn:focus {
   background-color: #404bbf;
   border: none;
-  fill: #ffffff;
 }
 
 .close-btn-icon {
@@ -893,15 +892,20 @@ img {
 }
 
 .review-form-field-label {
-  display: flex;
-  margin-bottom: 8px;
+  display: block;
+  margin-bottom: 4px;
   color: var(--LIGHT-SLATE, #8e8f99);
   font-family: Roboto;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 14px;
+  line-height: 1.17;
   letter-spacing: 0.48px;
+}
+
+.review-form-field-icon:hover,
+.review-form-field-icon:focus {
+  fill: #ffffff;
 }
 
 .review-form-field-wrapper {
