--- a/css/style.css
+++ b/css/style.css
@@ -922,8 +922,10 @@ img {
   height: 40px;
   border-radius: 4px;
   border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.4));
-  transition: border-color 250ms ease-out;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding-left: 38px;
+  background-color: transparent;
+  outline: transparent;
 }
 
 .review-form-input:focus {
@@ -937,7 +939,7 @@ img {
   left: 16px;
   transform: translateY(-50%);
   stroke: #2e2f42;
-  transition: stroke 250ms ease-out;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .review-form-input:focus + .review-form-field-icon {
   stroke: #4d5ae5;
