--- a/css/style.css
+++ b/css/style.css
@@ -842,4 +842,37 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.icon-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-close-btn:hover,
+.icon-close-btn:focus {
+  background-color: #404bbf;
+  border: none;
+}
+
+.icon-close-backdrop {
+  width: 24px;
+  height: 24px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-close-backdrop:hover,
+.icon-close-backdrop:focus {
+  fill: #ffffff;
+}
+
 /* MODAL WINDOW */
