--- a/css/style.css
+++ b/css/style.css
@@ -870,6 +870,16 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.button-subscribe-footer:hover,
+.button-subscribe-footer:focus {
+  fill: #ffffff;
+}
+
+.icon-subscribe-footer:hover,
+.icon-subscribe-footer:focus {
+  fill: #ffffff;
+}
+
 .icon-close-backdrop:hover,
 .icon-close-backdrop:focus {
   fill: #ffffff;
