--- a/css/style.css
+++ b/css/style.css
@@ -858,31 +858,18 @@ img {
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  stroke: #2e2f42;
 }
 
 .icon-close-btn:hover,
 .icon-close-btn:focus {
   background-color: #404bbf;
   border: none;
+  fill: #ffffff;
 }
-
 .icon-close-backdrop {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button-subscribe-footer:hover,
-.button-subscribe-footer:focus {
-  fill: #ffffff;
-}
-
-.icon-subscribe-footer:hover,
-.icon-subscribe-footer:focus {
-  fill: #ffffff;
-}
-
-.icon-close-backdrop:hover,
-.icon-close-backdrop:focus {
-  fill: #ffffff;
+  stroke: #2e2f42;
 }
 
 .modal-paragraph {
