--- a/css/style.css
+++ b/css/style.css
@@ -883,6 +883,7 @@ img {
 }
 
 .modal-review-page {
+  position: relative;
   margin-bottom: 8px;
 }
 
@@ -894,7 +895,7 @@ img {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 14px;
+  line-height: 1.17;
   letter-spacing: 0.48px;
 }
 
@@ -925,7 +926,8 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-icon:focus {
+.input-type-page:focus + .input-icon {
+  stroke: #4d5ae5;
   fill: #4d5ae5;
 }
 /* MODAL WINDOW */
