--- a/css/style.css
+++ b/css/style.css
@@ -1009,4 +1009,9 @@ img {
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.send-button:hover,
+.send-button:focus {
+  background-color: #404bbf;
+}
 /* MODAL WINDOW */
