--- a/css/style.css
+++ b/css/style.css
@@ -1002,7 +1002,7 @@ img {
   color: var(--WHITE, #fff);
   background-color: #4d5ae5;
   text-align: center;
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
