--- a/css/style.css
+++ b/css/style.css
@@ -980,13 +980,10 @@ img {
   fill: transparent;
 }
 
-.privacy-checkbox:checked + .privacy-text {
+.privacy-checkbox:checked + .privacy-label-text > .privacy-text {
   background-color: #404bbf;
-  border: none;
-}
-
-.privacy-checkbox:checked + .privacy-text svg {
   fill: #f4f4fd;
+  border: none;
 }
 
 .link-privacy {
